fix: layout bugs in payment agent list page for mobile

--- a/packages/core/src/sass/app/modules/cashier.scss
+++ b/packages/core/src/sass/app/modules/cashier.scss
@@ -500,10 +500,15 @@
             border: 1px solid var(--border-normal);
             flex: 1;
             padding: 1.6rem;
+            border-radius: $BORDER_RADIUS;
 
             .payment-agent__header {
                 margin-bottom: 8px;
                 text-align: center;
+
+                @include mobile {
+                    margin-top: 0;
+                }
             }
             @include desktop {
                 &:not(:first-child) {
@@ -525,13 +530,16 @@
                     align-items: center;
 
                     & h2 {
-                        margin-bottom: unset;
+                        margin: 0;
                     }
                     & .dc-btn {
                         margin: 0 0 0 auto;
                         padding: 0.3rem 0.8rem;
                         height: 3rem;
 
+                        &__text {
+                            font-size: 1.2rem;
+                        }
                         /* iPhone SE screen height fixes due to UI space restrictions */
                         @media only screen and (max-height: 480px) {
                             height: 4.8rem;
@@ -586,16 +594,15 @@
                 z-index: 1;
             }
             &-selector {
-                margin: 0 1.6rem 0.8rem;
+                margin: 0.8rem 1.6rem 3.2rem;
 
                 /* postcss-bem-linter: ignore */
                 & .dc-input {
-                    max-width: 20rem;
+                    max-width: 18rem;
+                    margin-left: auto;
                 }
                 /* postcss-bem-linter: ignore */
                 & .dc-select-native__placeholder {
-                    top: 0.9rem;
-                    left: 1.2rem;
                     background-color: var(--general-main-1);
                 }
             }
@@ -618,10 +625,26 @@
     &__accordion-content {
         &-line {
             margin-bottom: 8px;
+
+            &:first-child {
+                & .payment-agent__contact {
+                    color: var(--text-prominent);
+                }
+            }
+            &:last-child {
+                margin-bottom: 0;
+            }
+            @include mobile {
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                color: var(--brand-red-coral);
+            }
         }
         &-icon {
             vertical-align: middle;
             margin-right: 12px;
+            --fill-color1: var(--text-general);
         }
     }
     &__disclaimer {
@@ -672,6 +695,7 @@
     &__contact {
         text-decoration: none;
         color: var(--brand-red-coral);
+        font-weight: bold;
 
         @include mobile {
             padding-left: 0;
